--- a/leisure/src/main/resources/static/style/profile-anuncio.css
+++ b/leisure/src/main/resources/static/style/profile-anuncio.css
@@ -1,83 +1,52 @@
 .anuncio {
     padding: 1em;
 }
+
 .anuncio__card {
     height: auto;
-    padding: 0 1em;
+    padding: 0.5em 1em;
     border-radius: 10px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    /* box-shadow: 4px 10px 10px rgba(0, 0, 0, 0.2); */
     box-shadow: var(--cor-sombra);
-
 }
-.anuncio__card__imagem{
-    margin: 0.5em 0;
+
+.anuncio__card__lista {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    column-gap: 2em;
 }
 
-.anuncio__card__form{
+.anuncio__card__lista__imagem {
+    width: 100%;
+    border-radius: 0.5em;
+}
+
+.anuncio__card__form {
     padding: 2em 0;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 0.5em;
     overflow: hidden;
 }
 
-.anuncio__card img {
-    
-    width: 100%;
-    border-radius: 10px;
-}
-.anuncio__card__conteudo{
+.anuncio__card__conteudo {
     display: flex;
     align-items: center;
     column-gap: 0.5em;
-    width: 100%;
-    margin: 0.5em 0;
 }
-.anuncio__card__conteudo p{
-    font-weight: 500;
+
+.anuncio__card__conteudo__titulo {
+    text-transform: uppercase;
+    font-weight: 600;
     font-size: var(--font-size);
 }
-.anuncio__card__conteudo span{
-    width: 100%;
-    border: none;
-    background: transparent;
-}
-.anuncio__card__conteudo span:focus{
-    outline: 0;
-}
-.anuncio__card__botao{
+
+.anuncio__card__botao {
     margin: 1em 0;
     display: flex;
     justify-content: center;
-}
-.anuncio__card__botao button{
-    font-family: var(--font-family);
-    color: white;
-    padding: 0.75em 2.5em;
-    width: auto;
-    border: none;
-    border-radius: 5px;
-    background: var(--cor-font-destaque);
-}
-.anuncio__card__botao button:hover{
-    background-color: #00FF00;
-    transition: 0.2s;
-}
-
-.anuncio__container__mensagem {
-    height: 50vh;
-    /* margin: 5em 0; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: 3em;
 }
 
 .anuncio__container__mensagem__content {
@@ -100,33 +69,50 @@
     transition: 0.3s;
 }
 
+.anuncio__card__botao a {
+    background-color: var(--cor-terceira);
+    padding: 1em 2em;
+    border-radius: 0.5em;
+    color: var(--cor-primeira);
+    box-shadow: var(--cor-sombra);
+}
 
-@media screen and (min-width: 768px){
+
+@media screen and (min-width: 768px) {
     .anuncio {
         padding: 1em 5em;
     }
-    .anuncio__card{
+
+    .anuncio__card {
+        display: flex;
+        flex-direction: column;
+        column-gap: 2em;
+        align-items: center;
+        padding: 1em;
+    }
+
+    .anuncio__card__lista {
         display: flex;
         flex-direction: row;
         column-gap: 2em;
-        align-items: center;
-        padding: 2em 1em;
     }
-    .anuncio__card__imagem{
-        width: 25%;
-    }
-    .anuncio__card__form{
-        padding: 2em 0;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+
+    .anuncio__card__form {
+        padding: 0 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 0.5em;
     }
-    .anuncio__card__conteudo{
+
+    .anuncio__card__conteudo {
         margin: 0.25em;
+        padding: 0.5em 1em;
+        border-radius: 0.5em;
+        box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.1);
     }
-    .anuncio__card__botao{
-        margin: 1em ;
-        display: flex;
-        justify-content: center;
+    
+    .anuncio__card__conteudo__resultado {
+        color: var(--cor-segunda);
     }
 }
