--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -6,6 +6,7 @@
 @import url('botoes.css');
 @import url('cabecalho.css');
 @import url('duvidas.css');
+@import url('edicaoImovel.css');
 @import url('estilizacoes.css');
 @import url('index-carrossel.css');
 @import url('index-como-comprar.css');
@@ -16,6 +17,7 @@
 @import url('login-cadastro.css');
 @import url('loginCadastro.css');
 @import url('modal.css');
+@import url('perfil-carrossel.css');
 @import url('premium.css');
 @import url('profile-anunciar.css');
 @import url('profile-anuncio.css');
@@ -48,7 +50,7 @@ body {
 	overflow-x: hidden;
 }
 
-input, select {
+input, select, textarea {
     font-family: var(--font-family);
     padding: 0.5em 0;
     width: 100%;
@@ -61,7 +63,7 @@ select {
     appearance: none;
 }
 
-select:focus, input:focus {
+select:focus, input:focus, textarea:focus {
     outline: 0;
 }
 
@@ -126,12 +128,3 @@ input::placeholder {
 		--titulo-terceiro: 1.15em;
 	}
 }
-
-/* @media screen and (min-width: 1920px){
-
-	:root {
-		--font-size: 1.25em;
-		--titulo-segundo: 1.5em;
-		--titulo-terceiro: 1.35em;
-	}
-} */
