Adição do botão de deletar imóvel -O botão requer estilização -Foto do imóvel sendo deletada junto

--- a/leisure/src/main/resources/templates/LoginCadastro.html
+++ b/leisure/src/main/resources/templates/LoginCadastro.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="cadastro__container__conteudo">
                         <label for="cadastroSenha">Senha</label>
-                        <input type="password" name="senha" id="cadastroSenha" placeholder="Min de 8 caracteres" minlength="8" required>
+                        <input type="password" name="senha" id="senha" placeholder="Min de 8 caracteres" minlength="8" required>
                     </div>
                     <div class="cadastro__container__conteudo">
                         <label for="dadoTelefone">Telefone</label>
