--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -28,7 +28,7 @@
             <div class="anunciar__conteudo__progresso-barra"></div>
             <div class="anunciar__conteudo__progresso-coluna">Dados sustentáveis</div>
             <div class="anunciar__conteudo__progresso-coluna">Dados do imóvel</div>
-            <div class="anunciar__conteudo__progresso-coluna">Finalizando Anucnio</div>
+            <div class="anunciar__conteudo__progresso-coluna">Finalizando Anúncio</div>
         </div>
 
         <!-- TIPO DE IMOVEL -->
