Ajustes no LoginCadastro - Feito verificação de senhas - ajustes de layout para mobile

--- a/leisure/src/main/resources/templates/LoginCadastro.html
+++ b/leisure/src/main/resources/templates/LoginCadastro.html
@@ -31,18 +31,24 @@
                         <input type="email" name="email" id="email" autocomplete="off" minlength="8" onblur="checkIguality('email')" required>
                         <span id="email-feedback" class="feedback"></span>
                     </div>
+
                     <div class="cadastro__container__conteudo">
                         <label for="cadastroSenha">Senha</label>
                         <input type="password" name="senha" id="senha" placeholder="Min de 8 caracteres" minlength="8" required>
                     </div>
                     <div class="cadastro__container__conteudo">
+                        <label for="cadastroSenha">Senha</label>
+                        <input type="password" id="senha2" placeholder="Repetir senha" minlength="8" required>
+                        <span class="cadastro__container__validacaoSenha"></span>
+                    </div>
+
+                    <div class="cadastro__container__conteudo">
                         <label for="dadoTelefone">Telefone</label>
-                        <input type="tel" id="telefone" name="telefone" autocomplete="off" placeholder="Ex: (11)91010-2215" minlength="11" maxlength="15" onblur="checkIguality('telefone')" required data-cadastro="cadastroTelefone">
+                        <input type="tel" id="telefone" name="telefone" autocomplete="off" placeholder="Ex: (11)91010-2215" minlength="15" maxlength="15" onblur="checkIguality('telefone')" required data-cadastro="cadastroTelefone">
                         <span id="telefone-feedback" class="feedback"></span>
                     </div>
                     <div class="modal-body__botoes d-flex flex-column gap-2 justify-content-center">
                         <button type="submit" id="btnCadastro" class="btn btn-primary">Cadastrar</button>
-                        <!-- <span class="btn-login" name="tenhoLogin">Já tenho cadastro</span> -->
                     </div>
                 </form>
             </div>
@@ -59,8 +65,6 @@
                         <label for="loginEmail">E-mail</label>
                         <input type="email" name="username" id="loginEmail">
                     </div>
-
-    
                     <div class="cadastro__container__conteudo">
                         <label for="loginSenha">Senha</label>
                         <input type="password" name="password" id="loginSenha">
@@ -75,5 +79,7 @@
     </main>
     <!-- RODAPE -->
     <footer th:replace="~{fragments/rodape :: rodape}"></footer>
+
+    <script src="/script/validarSenha.js"></script>
 </body>
 </html>
