--- a/leisure/src/main/resources/static/style/loginCadastro.css
+++ b/leisure/src/main/resources/static/style/loginCadastro.css
@@ -1,21 +1,36 @@
+.login__cadastro {
+    padding: 5em 1em;
+    display: flex;
+    justify-content: center;
+}
+
+.login__cadastro__container {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    row-gap: 2em;
+}
+
+.modal-body {
+    padding: 1em;
+    width: 90vw;
+    border: 1px solid var(--cor-segunda);
+    border-radius: 1em;
+}
 
 @media (min-width: 768px){
     .login__cadastro {
         padding: 5em 0 10em 0;
-        display: flex;
-        justify-content: center;
     }  
 
     .login__cadastro__container {
         width: 80vw;
-        display: flex;
-        align-items: baseline;
+        flex-direction: row;
         column-gap: 2em;
     }
 
     .modal-body {
         padding: 5em 2em;
-        border: 1px solid var(--cor-segunda);
-        border-radius: 1em;
     }
 }
