--- a/leisure/src/main/resources/static/style/cabecalho.css
+++ b/leisure/src/main/resources/static/style/cabecalho.css
@@ -18,9 +18,10 @@
 }
 
 .container__usuario {
+    display: block;
     text-align: center;
     margin: 0 0.5em 1em 0.5em;
-    padding: 0.25em 0;
+    padding: 0.25em;
     width: 90%;
     border-radius: 5px;
     cursor: pointer;
@@ -191,7 +192,7 @@
         align-items: center;
         text-align: center;
         width: auto;
-        padding: 0 0.75em;
+        padding: 0.75em;
         border-radius: 20px;
         transition: 0.5s;
     }
