--- a/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
+++ b/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
@@ -22,6 +22,7 @@
                             <li>• <span th:text="${imovel.numBanheiros}"></span> banheiro</li>
                             <li>• <span th:text="${imovel.vagasGaragem}"></span> vaga</li>
                             <!-- <li>• IPTU R$<span th:text="${imovel.iptu}"></span>,00</li> -->
+                            <li>• IPTU R$<span th:text="${imovel.iptu}"></span></li>
                         </ul>
                         <ul class="resultado__filtro__card__conteudo__content__lista">
                             <li>• <span th:text="${imovel.descricao}"></span></li>
