--- a/leisure/src/main/resources/templates/fragments/rodape.html
+++ b/leisure/src/main/resources/templates/fragments/rodape.html
@@ -37,7 +37,7 @@
             <h3 class="titulo__terceiro">Categorias</h3>
             <li class="rodape__conteudo-item" data-rodape="link">
                 <label class="rodape__conteudo-link pointer">
-                    <i class="fa-regular fa-house-tree"></i>
+                    <i class="fa-regular fa-building"></i>
                     <span>Apartamentos</span>
                     <form method="post" th:action="@{/leisure/filtragem}" data-rodape="form">
                         <input type="hidden" name="tipo" value="apartamento">
@@ -46,7 +46,7 @@
             </li>
             <li class="rodape__conteudo-item" data-rodape="link">
                 <label class="rodape__conteudo-link pointer">
-                    <i class="fa-regular fa-house-tree"></i>
+                    <i class="fa-regular fa-house"></i>
                     <span>Casas</span>
                     <form method="post" th:action="@{/leisure/filtragem}" data-rodape="form">
                         <input type="hidden" name="tipo" value="casa">
@@ -64,7 +64,7 @@
             </li>
             <li class="rodape__conteudo-item" data-rodape="link">
                 <label class="rodape__conteudo-link pointer">
-                    <i class="fa-regular fa-house-tree"></i>
+                    <i class="fa-regular fa-trowel-bricks"></i>
                     <span>Terrenos</span>
                     <form method="post" th:action="@{/leisure/filtragem}" data-rodape="form">
                         <input type="hidden" name="tipo" value="terreno">
