--- a/leisure/src/main/resources/static/style/anuncio-filtro.css
+++ b/leisure/src/main/resources/static/style/anuncio-filtro.css
@@ -7,15 +7,6 @@
     overflow: hidden;
 }
 
-/* [data-main="conteudo"] {
-    padding: 2em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-} */
-
 .filtro__botao {
     border-radius: 5px;
     width: 90vw;
@@ -119,6 +110,7 @@
     }
 
     [data-main="conteudo"] {
+        min-height: 65vh;
         margin: 0;
         margin-top: 7em;
         display: grid;
@@ -139,9 +131,7 @@
     }
 
     .filtro__filtro {
-        /* background: var(--cor-primeira); */
         background: transparent;
-        /* box-shadow: var(--cor-sombra); */
         box-shadow: none;
         border-radius: 0;
         position: absolute;
