--- a/leisure/src/main/resources/static/style/edicaoImovel.css
+++ b/leisure/src/main/resources/static/style/edicaoImovel.css
@@ -1,10 +1,26 @@
 .editar__anuncio {
-    padding: 10em;
+    padding: 1em;
+}
+
+.editar__anuncio__voltar {
+    position: absolute;
+    right: 1.5em;
+    top: 5.5em;
+}
+
+.editar__anuncio__voltar a {
+    color: var(--cor-segunda);
+    transition: 0.3s;
+}
+
+.editar__anuncio__voltar a:hover {
+    color: var(--cor-font-principal);
+    transition: 0.3s;
 }
 
 .editar__anuncio__card {
     height: auto;
-    padding: 1em;
+    padding: 2.5em 1em;
     border-radius: 10px;
     overflow: hidden;
     display: flex;
@@ -49,11 +65,12 @@
     display: flex !important;
 }
 
-.editar__anuncio__card__botao {
-    margin: 1em 0;
+.editar__anuncio__card__botao, .editar__anuncio__card__botao__excluir {
+    margin: 0.5em 0 0 0;
     display: flex;
     justify-content: center;
 }
+
 
 .editar__anuncio__card__botao button {
     font-family: var(--font-family);
@@ -66,9 +83,25 @@
     transition: 0.3s;
 }
 
+.editar__anuncio__card__botao__excluir button {
+    font-family: var(--font-family);
+    color: white;
+    padding: 0.75em 2.5em;
+    width: auto;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(255, 66, 66);
+    transition: 0.3s;
+}
+
 .editar__anuncio__card__botao button:hover{
     
     background: var(--cor-font-destaque);
+    transition: 0.3s;
+}
+
+.editar__anuncio__card__botao__excluir button:hover {
+    background: red;
     transition: 0.3s;
 }
 
@@ -107,6 +140,12 @@
         padding: 10em;
     }
 
+    .editar__anuncio__voltar {
+        position: absolute;
+        right: 11em;
+        top: 18em;
+    }
+
     .editar__anuncio__card {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -143,8 +182,8 @@
         white-space: nowrap;
     }
 
-    .editar__anuncio__card__botao {
-        margin: 1em ;
+    .editar__anuncio__card__botao, .editar__anuncio__card__botao__excluir {
+        margin: 0.25em ;
         display: flex;
         justify-content: center;
     }
