--- a/leisure/src/main/resources/static/style/profile-meusdados.css
+++ b/leisure/src/main/resources/static/style/profile-meusdados.css
@@ -1,5 +1,5 @@
 .meusdados{
-    padding: 1em 2em;
+    padding: 2em 2em;
 }
 .meusdados__imagem{
     display: flex;
@@ -30,6 +30,11 @@
     margin: 2em 0;
     display: none;
 }
+
+.meusdados__container {
+    margin-top: 2em;
+}
+
 .meusdados__container__conteudo{
     margin: 0;
     display: flex;
@@ -44,6 +49,27 @@
 }
 .meusdados__container__conteudo input:focus{
     outline: 0;
+}
+
+.meusdados__card__botao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.meusdados__card__botao button {
+    font-family: var(--font-family);
+    color: white;
+    padding: 0.75em 2.5em;
+    width: auto;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--cor-terceira);
+    transition: 0.3s;
+}
+
+.meusdados__card__botao button:hover {
+    background: var(--cor-font-destaque);
+    transition: 0.3s;
 }
 
 @media screen and (min-width: 768px){
