Ajustes na index - adicionado ad para baixar o app

--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -231,7 +231,12 @@
             </div>
         </section> -->
     </main>
+    <div class="ad__container" data-ad="ad-app">
+        <i class="fa-light fa-xmark ad__container__close" data-ad="close"></i>
+        <span class="ad__container__content">Baixe o app LeisureImóveis</span>
+    </div>
     <!-- RODAPE -->
     <footer th:replace="~{fragments/rodape :: rodape}"></footer>
+    <script src="/script/ad.js"></script>
 </body>
 </html>
