Ajustes na index -ajustes na altura do carrossel

--- a/leisure/src/main/resources/static/style/index-carrossel.css
+++ b/leisure/src/main/resources/static/style/index-carrossel.css
@@ -10,7 +10,8 @@
     
     .carousel-item img {
         object-fit: cover;
-        height: 800px;
+        min-height: 800px;
+        max-height: 1000px;
     }
 
     .carousel-control-prev, .carousel-control-next{
