Ajustes na index -ajustes no tamanho do campo de pesquisa

--- a/leisure/src/main/resources/static/style/index-pesquisa.css
+++ b/leisure/src/main/resources/static/style/index-pesquisa.css
@@ -67,7 +67,8 @@
 
 @media (min-width: 768px) {
     .pesquisa {
-        width: 40%;
+        /* min-width: 100px; */
+        max-width: 500px;
         position: absolute;
         left: 1em;
         top: 250px;
