--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -8,6 +8,7 @@
 @import url('duvidas.css');
 @import url('edicaoImovel.css');
 @import url('estilizacoes.css');
+@import url('index-ad.css');
 @import url('index-carrossel.css');
 @import url('index-como-comprar.css');
 @import url('index-destaques.css');
