--- a/leisure/src/main/resources/static/style/botoes.css
+++ b/leisure/src/main/resources/static/style/botoes.css
@@ -32,11 +32,12 @@
 }
 
 .logout__lista {
+    text-align: center;
     display: block;
-    padding: 0.5em;
+    padding: 0 0.5em;
+    margin-bottom: 2em;
     position: relative;
     top: 10px;
-    left: 0;
     border-radius: 10px;
 }
 
@@ -59,12 +60,12 @@
     }
 
     .logout__lista {
-        /* display: none; */
         padding: 1em 1.25em;
+        margin-bottom: 0;
         background: var(--cor-hover);
         position: absolute;
-        top: 60px;
-        left: 0;
+        top: 80px;
+        right: 0.25em;
         border-radius: 10px;
     }
 }
