--- a/leisure/src/main/resources/static/style/cabecalho.css
+++ b/leisure/src/main/resources/static/style/cabecalho.css
@@ -31,8 +31,6 @@
 
 .logout {
     background: transparent;
-    margin: 0 0.5em 1em 0.5em !important;
-    padding: 0 0.75em !important;
 }
 
 .container__usuario-imagem img{
@@ -172,7 +170,8 @@
         top: 0;
         z-index: 3;
     }
-    .cabecalho__container .container__rotulo{
+    
+    .cabecalho__container .container__rotulo {
         display: none;
         padding: 0;
     }
@@ -205,7 +204,6 @@
         color: var(--cor-font-principal);
     }
     
-
     .container__usuario:hover {
         background: var(--cor-hover);
         transition: 0.5s;
@@ -224,9 +222,9 @@
     }
     .lista-menu {
         display: flex;
-        justify-content: space-between; 
+        justify-content: space-between;
         align-items: center;
-        position: relative;
+        /* position: relative; */
         padding-right: 1em;
         width: 100vw;
         left: 0 !important;
@@ -234,6 +232,13 @@
     }
 
     .lista-menu__conteudo {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .lista-menu__conteudo__lista {
         display: flex;
         flex-direction: row;
     }
